# AI-Resume-Analyzer

./: README.md  minor_project_resume_tester.py  minor_project_resume_tester01.py  pyproject.toml
resumes/: emily_davis.docx  john_carter.docx  michael_brown.docx  sarah_kim.docx
